# RADIO_MANAGEMENT_SERVER

./: .gitignore  amari_radios.sql  amari_radios07102021.sql  amari_radios_3.sql  amari_radios_uuid_64.sql  docker-compose.yaml  json_Example_for_post.txt
agent/: Dockerfile  README.md  setup.cfg
agent/src/openapi_server/: main.py
agent/src/openapi_server/apis/: events_subscription_api.py  notification_listeners__client_side_api.py  resource_api.py
agent/src/openapi_server/models/: addressable.py  attachment_ref.py  characteristic.py  entity_ref.py  event_subscription_input.py  logical_resource.py  physical_resource.py  place.py  related_party.py  resource.py  resource_attribute_value_change_event.py  resource_attribute_value_change_event_payload.py  resource_create.py  resource_delete_event_payload.py  resource_ref_or_value.py  resource_specification_ref.py  resource_status_type.py  resource_update.py  time_period.py
server/: Dockerfile  README.md  docker-compose.yaml  openapi.yaml  ssssdocker-compose.yaml
server/.openapi-generator/: FILES
server/src/openapi_server/: db.py  main.py  mongo_db.py
server/src/openapi_server/apis/: resource_api.py  ws.py
server/src/openapi_server/models/: attachment.py  attachment_ref_or_value.py  characteristic.py  characteristic_relationship.py  constraint_ref.py  entity.py  error.py  event_subscription.py  extensible.py  feature.py  feature_relationship.py  note.py  place_ref.py  quantity.py  related_place_ref_or_value.py  resource.py  resource_administrative_state_type.py  resource_create.py  resource_create_event.py  (+10 more)
